added comment on css/landing.css

--- a/css/landing.css
+++ b/css/landing.css
@@ -15,9 +15,9 @@
   
 }
 
-.product_preview_container {
+/* .product_preview_container {
 
-}
+} */
 
 .product_preview_container img{
   max-width: 100%;
