--- a/css/body.css
+++ b/css/body.css
@@ -1,8 +1,228 @@
 * {
   font-family: Recoleta, sans-serif;
 
-  background-color: #0f2d32;
-
   margin: 0;
   padding: 0;
+
+  box-sizing: border-box;
+
+  color: white;
+}
+
+b {
+  background-color: #0f2d32;
+}
+
+.latest_release {
+  display: flex;  
+  flex-direction: column;
+  align-items: center;
+
+  width: 100%;
+  height: 70vh;
+ 
+
+  background-color: #0f2d32;
+}
+
+.latest_release_title {
+  margin-bottom: 20px;
+  margin-top: 3rem;
+}
+
+.latest_release_container {
+  width: 100%;
+  height: 100%;
+  /* border-style: solid;
+  border-color: red; */
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+
+}
+
+.product_overview {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  height: 50vh;
+  width: 350px;
+  margin: 0 1rem;
+}
+
+.product_img {
+  position: relative;
+  width: 100%;
+  height: 300px;
+
+  object-fit: cover;
+  scale: 98%;
+
+
+}
+
+
+.product_info {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight: 100;
+
+  text-align: center;
+  text-decoration: none;
+}
+
+.text_overlay {
+  position: absolute;
+
+  width: 100%; 
+  height: 91.2%;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  cursor: pointer;
+
+  background-color: rgba(0, 0, 0, 0.603);
+
+  opacity: 0;
+
+  scale: 98.3%;
+  bottom: 29px;
+ }
+
+.text_overlay:hover {
+  opacity: 1;
+
+  transition: all 0.3s ease-in-out;
+ 
+}
+
+.overlay_title, .overlay_info {
+  background-color: rgba(0, 0, 0, 0);
+
+
+
+  font-family: sans-serif;
+
+ }
+
+.overlay_title {
+  padding-top: 150px;
+  padding-bottom: 20px;
+
+  font-weight: lighter;
+}
+
+@media (max-width: 1024px) {
+  .latest_release {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+
+    height: auto;
+  }
+
+  .latest_release_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    row-gap: 30px;
+    margin-top: 5rem;
+
+  }
+
+  .product_overview {
+    position: relative;
+    width: 25rem;
+    height: 25rem;
+
+
+
+    display: flex;
+    flex-direction: column; 
+    justify-content: space-between;
+
+  }
+
+  .product_img {
+    position: relative;
+    width: 100%;  
+    height: 300px;
+
+    object-fit: cover;
+    margin-bottom: 15px;
+  
+  }
+
+  .product_info {
+    bottom: 0;
+
+    height: 100%;
+
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 100;
+
+    text-align: center;
+  }
+
+  .text_overlay {
+    position: absolute;
+
+    background-color: rgba(0, 0, 0, 0.603);
+
+    top: 0;
+
+    width: 100%;
+    height: 75%;
+
+
+    cursor: pointer;
+
+    display: flex;
+    flex-direction: column;
+    align-items:  center;
+    justify-content: center;
+    opacity: 0;
+
+  }
+
+  .text_overlay:hover {
+    opacity: 1;
+
+    transition: 0.5s ease-in-out;
+  }
+
+}
+
+/* }SHIP INFO */
+
+.wip {
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+
+padding-top: 100 px;
+
+font-family: sans-serif;
+
+max-width: 100%;
+height: 100vh;
+background-color: #0f2d32;
+
+}
+
+.back {
+  margin: 1rem 0;
+  border-style: none;
+  border-radius: 10px;
+
+  background-color: #3A97A7;
+
+  padding: 0.5rem;
+
+  cursor: pointer;
 }
