--- a/css/header.css
+++ b/css/header.css
@@ -1,64 +1,155 @@
 .navbar {
   display: flex;
-  justify-content: center;
-
-
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
   top: 0;
-  height: 75px;
+  height: 74px;
 
   text-align: center;
-
+  width: 100%;
   padding: 0 15px;
 
   color: white;
 
+  z-index: 99;
+  
+  background-color: #0f2d32;
+
 }
 
-.navbar_container {
+* .navbar_container {
   display: flex;
   justify-content: space-between;
   align-items: center;
 
   margin: 0 auto;
   width: 100%;
+} 
+
+.logo_title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+  height: 100%;
+
+ margin-left: 12px;
+}
+
+.img_logo {
+  height: 100%;
 }
 
 #logo {
-  scale: 20%;
-  margin-right: -650px;
-  margin-left: -110px;
-
+  scale: 82%;
   cursor: pointer;
+
+  height: 100%
+
 }
 
 .name {
-  padding-left: 75px;
-  font-size: 25px;
+  font-size: 20px;
   font-style: normal;
-  font-weight: 300;
+  font-weight: 300; 
 
+  padding-left: 20px;
   cursor: pointer;
 }
 
 .navbar_menu {
 
   display: flex;
-  list-style: none;
-
   justify-content: center;
   align-items: center;
+
 }
 
 .navbar_items {
   font-family: sans-serif;
-  color: white;
   text-align: center;
 
   padding: 0 1rem;
+  list-style: none;
+  display: flex;
 }
 
-.navbar_items:hover {
+.navbar_links {
+  text-decoration: none;
+  color: white;
+
+}
+
+.navbar_links:hover {
   cursor: pointer;
 
   color: #51C2D5;
 }
+
+.hamburger {
+  display: none;
+  cursor: pointer;
+}
+
+.bar {
+  display: block;
+  width: 25px;
+  height: 3px;
+  margin: 5px 0;
+  transition: all 0.3s ease;
+  background-color: white;
+}
+ @media (max-width: 1024px) {
+  .hamburger {
+    display: block;
+    margin-left: 20rem;
+  }
+
+  .hamburger.active .bar:nth-child(2){
+    opacity: 0;
+  }
+  .hamburger.active .bar:nth-child(1){
+    transform: translateY(8px) rotate(45deg); 
+  }
+  .hamburger.active .bar:nth-child(3){
+    transform: translateY(-8px) rotate(-45deg); 
+  }
+
+  .navbar_menu {
+    position: fixed;
+    top: -1000px;
+    gap: 0;
+    flex-direction: column;
+    background-color: #0f2d32;
+    width: 100%;
+    text-align: center;
+    transition: 0.3s;
+    left: 0;
+  }
+
+  .navbar_items {
+    margin: 20px 0;
+    color: white;
+  }
+
+  .navbar_menu.active {
+    top: 70px;
+    left: 0;
+    
+  
+  }
+
+  .name {
+    display: none;
+  }
+
+  #logo {
+    scale: 65%;
+  }
+
+  .navbar_links { 
+    display: flex;
+  }
+ }
+ 
