--- a/css/body.css
+++ b/css/body.css
@@ -19,7 +19,7 @@ b {
   align-items: center;
 
   width: 100%;
-  height: 70vh;
+  height: 100%;
  
 
   background-color: #0f2d32;
@@ -46,7 +46,7 @@ b {
   position: relative;
   display: flex;
   flex-direction: column;
-  height: 50vh;
+  height: 100%;
   width: 350px;
   margin: 0 1rem;
 }
@@ -115,12 +115,13 @@ b {
   font-weight: lighter;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 768px) {
   .latest_release {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
 
+    width: 100%;
     height: auto;
   }
 
@@ -131,16 +132,16 @@ b {
 
     row-gap: 30px;
     margin-top: 5rem;
-
+    width: 100%;
   }
 
   .product_overview {
     position: relative;
-    width: 25rem;
+    width: 80%;
     height: 25rem;
 
 
-
+    
     display: flex;
     flex-direction: column; 
     justify-content: space-between;
@@ -195,7 +196,15 @@ b {
     transition: 0.5s ease-in-out;
   }
 
+  @media (max-width: 681px) {
+    .latest_release_container {
+      flex-wrap: wrap;
+    }
+  }
+
 }
+
+
 
 /* }SHIP INFO */
 
