--- a/css/header.css
+++ b/css/header.css
@@ -18,7 +18,7 @@
 
 }
 
-* .navbar_container {
+ .navbar_container {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -45,8 +45,8 @@
   scale: 82%;
   cursor: pointer;
 
-  height: 100%
-
+  height: 100%;
+  
 }
 
 .name {
@@ -63,6 +63,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
 
 }
 
@@ -100,10 +101,11 @@
   transition: all 0.3s ease;
   background-color: white;
 }
- @media (max-width: 1024px) {
+ @media (max-width: 768px) {
   .hamburger {
     display: block;
-    margin-left: 20rem;
+
+
   }
 
   .hamburger.active .bar:nth-child(2){
@@ -115,6 +117,19 @@
   .hamburger.active .bar:nth-child(3){
     transform: translateY(-8px) rotate(-45deg); 
   }
+
+  .navbar {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+
+
+    margin: 0;
+    box-sizing: border-box;
+  }
+
+
 
   .navbar_menu {
     position: fixed;
@@ -136,6 +151,7 @@
   .navbar_menu.active {
     top: 70px;
     left: 0;
+ 
     
   
   }
@@ -145,7 +161,7 @@
   }
 
   #logo {
-    scale: 65%;
+    scale: 60%;
   }
 
   .navbar_links { 
@@ -153,3 +169,9 @@
   }
  }
  
+ 
+ @media (max-width: 457px) {
+  .navbar {
+   width: 100%;
+  }
+ }
