--- a/css/landing.css
+++ b/css/landing.css
@@ -8,7 +8,6 @@
   background:linear-gradient(rgba(0, 0, 0, 0.096),
    rgba(0, 0, 0, 0.363)), url('/image/tsl_rosemary.png') 
   no-repeat center / cover;
-
 }
 
 .container {
@@ -53,6 +52,12 @@
 }
 
 @media (max-width: 768px) {
+
+#hero {
+  background-size: cover;
+
+  height: 50vh;
+}
 
  .container {
   display: flex;
