--- a/css/body.css
+++ b/css/body.css
@@ -23,6 +23,7 @@ b {
  
 
   background-color: #0f2d32;
+  
 }
 
 .latest_release_title {
@@ -33,13 +34,13 @@ b {
 .latest_release_container {
   width: 100%;
   height: 100%;
-  /* border-style: solid;
-  border-color: red; */
 
+ 
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: center;
 
+  gap: .5em;
 }
 
 .product_overview {
@@ -48,7 +49,7 @@ b {
   flex-direction: column;
   height: 100%;
   width: 350px;
-  margin: 0 1rem;
+
 }
 
 .product_img {
@@ -88,8 +89,8 @@ b {
 
   opacity: 0;
 
-  scale: 98.3%;
-  bottom: 29px;
+  scale: 98.95%;
+  bottom: 27px;
  }
 
 .text_overlay:hover {
@@ -115,7 +116,74 @@ b {
   font-weight: lighter;
 }
 
-@media (max-width: 768px) {
+/* FOOTER */
+
+  .footer_container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+
+    background-color: #0f2d32;
+
+
+
+    gap: 1rem;
+
+    height: 45vh;
+
+  } 
+
+  .footer_socials {
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+
+    width: 80%;
+    height: 50%;
+
+
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+
+    border-bottom-style: solid;
+    border-bottom-width: 0.05cm;
+    border-bottom-color: #3F575B;
+    
+  }
+
+
+  .footer_social_links {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+
+    height: 100%;
+    width: 90%;  
+
+
+
+  }    
+
+  .footer_social_links a {
+      width: 2%;
+  
+   }
+
+  
+
+
+/* FOOTER */
+
+
+
+ @media (max-width: 768px) {
   .latest_release {
     display: flex;
     flex-direction: column;
@@ -202,7 +270,121 @@ b {
     }
   }
 
-}
+  /* FOOTER */
+
+  .footer_container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+
+    background-color: #0f2d32;
+    
+    height: 100%;
+  }
+
+  .footer_socials {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+
+    width: 90%;
+    height: 20vh;
+
+    border-bottom-style: solid;
+    border-bottom-width: 0.05cm;
+    border-bottom-color: #3F575B;
+    margin-top: 1rem;
+  }
+
+  .footer_social_links {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 1rem;
+
+    height: 10vh;
+    width: 90%;
+
+  }
+
+  .footer_social_links a {
+    margin-top: 0.1rem;
+
+    width: 5%;
+
+  }
+
+  .footer_contact {
+    margin-top: 5rem;
+
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+
+    align-items: center;
+
+    height: 15vh;
+    width: 100%;
+  }
+
+  .footer_contact h4 {
+    font-family: sans-serif;
+    font-weight: 200;
+  }
+  
+  .footer_contact input {
+    border-style: none;
+    border-radius: 2px;
+
+    padding: .5rem;
+
+    width: 60%;
+
+    outline: none;
+
+
+
+    color: black;
+  }
+
+  .footer_form  {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    height: auto;
+
+
+
+  }
+  
+  .footer_send  {
+    color: black;
+
+  }
+
+  .footer_cc {
+    display: flex;
+    align-items: center;
+    height: 100%;
+
+  
+  }
+
+  .footer_cc p {
+    font-size: 10px;
+  }
+
+  }
+  
+
+  
+
+  /* FOOTER */
 
 
 
