--- a/css/landing.css
+++ b/css/landing.css
@@ -45,6 +45,7 @@
   padding: .8rem 1.5rem;
 
   font-family: sans-serif;
+  font-size: small;
 }
 
 .container .info a:hover {
@@ -77,10 +78,11 @@
 }
 
 .container .info a {
-  font-size: small;
-  margin-left: 6.15rem;
+  font-size: 0.7rem;
+  margin-left: 4.75rem;
 
   padding: .7rem 2rem;
+  
 }
 }
 
