--- a/css/body.css
+++ b/css/body.css
@@ -94,8 +94,10 @@ b {
 .text_overlay {
   position: absolute;
 
-  width: 100%; 
-  height: 91.2%;
+  width: 98.9%; 
+  height: 91.25%;
+
+  margin-left: .14rem;
 
   display: flex;
   flex-direction: column;
@@ -108,8 +110,8 @@ b {
 
   opacity: 0;
 
-  scale: 98.95%;
-  bottom: 27px;
+  scale: 99.2%;
+  bottom: 27.12px;
  }
 
 .text_overlay:hover {
@@ -266,6 +268,9 @@ b {
     width: 100%;
     height: 75%;
 
+    bottom: 2px;
+    scale: 98%;
+    margin: 0;
 
     cursor: pointer;
 
@@ -398,8 +403,18 @@ b {
     font-size: 10px;
   }
 
+ 
+
   }
   
+  @media  (max-width:360px) {
+    .footer_socials h2 {
+    font-size: 1rem;
+    }
+  }
+    
+ 
+
 
   
 
